tests/paczka1/fuzzy1/98474885.err
Error in line 4: e4flO7m SC11 22,8
Error in line 6: 2LB S960 80,7
Error in line 10: oZY3gG A62 3,3
Error in line 23: oZY3gG S911 20,7
Error in line 25: oZY3gG A821 62,2
Error in line 32: vvOEJGqU A821 26,4
